@@ -1,10 +1,10 @@
 package com.wastewise.worker.management.utility;
 
-import io.jsonwebtoken.Claims;
 import jakarta.servlet.FilterChain;
 import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -13,10 +13,11 @@ import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
+@Slf4j
 @Component
-public class JwtRequestFilter extends OncePerRequestFilter {
+public class JwtAuthenticationFilter extends OncePerRequestFilter {
 
     @Autowired
     private JwtUtil jwtUtil;
@@ -29,21 +30,18 @@ public class JwtRequestFilter extends OncePerRequestFilter {
         final String authHeader = request.getHeader("Authorization");
 
         if (authHeader != null && authHeader.startsWith("Bearer ")) {
-            String token = authHeader.substring(7);
-
+            String token = authHeader.replace("Bearer ", "");
             if (jwtUtil.validateToken(token)) {
-                String role = jwtUtil.extractRole(token);
                 String workerId = jwtUtil.extractWorkerId(token);
+                String role = jwtUtil.extractRole(token);
+                log.info("Role extracted from token: "+role);
 
-                SimpleGrantedAuthority authority = new SimpleGrantedAuthority("ROLE_" + role.toUpperCase());
-
-                UsernamePasswordAuthenticationToken authentication =
-                        new UsernamePasswordAuthenticationToken(workerId, null, Collections.singletonList(authority));
-
-                SecurityContextHolder.getContext().setAuthentication(authentication);
+                UsernamePasswordAuthenticationToken authenticationToken = new UsernamePasswordAuthenticationToken(workerId, null,
+                        List.of(new SimpleGrantedAuthority("ROLE_"+role)));
+                SecurityContextHolder.getContext().setAuthentication(authenticationToken);
+                log.info("Setting authority: ROLE_"+role);
             }
         }
-
         filterChain.doFilter(request, response);
     }
 }
